--- a/src/pages/css/Account.css
+++ b/src/pages/css/Account.css
@@ -80,6 +80,10 @@
   text-align: center;
 }
 
+.horizontal-img {
+  width: 400px;
+}
+
 img {
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
