--- a/src/pages/css/About.css
+++ b/src/pages/css/About.css
@@ -1,7 +1,17 @@
-.ab-hori {
+.ab-horizontal {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.ab-vertical {
+  display: flex;
+  flex-direction: column;
+  padding-right: 100px;
+}
+.ab-vertical2 {
+  display: flex;
+  flex-direction: column;
   gap: 20px;
   margin: 1rem;
 }
@@ -21,7 +31,7 @@
 .ab-t {
   font-family: "Courier New", Courier, monospace;
   font-size: 40px;
-  color: rgb(102, 157, 253);
+  color: rgb(118, 197, 250);
   animation: fade 1s ease-in 1s;
   pointer-events: none;
   padding-right: 20px;
@@ -33,6 +43,11 @@
   pointer-events: none;
   gap: 20px;
   margin: 1rem;
+}
+
+.logo2 {
+  height: 300px;
+  width: 300px;
 }
 
 @keyframes fadein {
