--- a/src/pages/css/Stats.css
+++ b/src/pages/css/Stats.css
@@ -57,17 +57,29 @@ form * {
   font-size: 28px;
 }
 
-.stats-btn {
-  color: rgb(118, 197, 250);
+.stats-btn2 {
+  color: white;
   font-size: 24px;
-  background-color: white;
+  background-color: rgb(118, 197, 250);
   margin: 0;
-  border: 3px solid #000405;
+  border: 3px solid #ffffff;
 }
 
-button:hover {
-  background-color: rgb(118, 197, 250);
+.stats-btn3 {
   color: white;
+  font-size: 24px;
+  background-color: rgb(0, 0, 0);
+  margin: 0;
+  border: 3px solid #ffffff;
+}
+
+.stats-btn2:hover {
+  background-color: white;
+  color: rgb(118, 197, 250);
+}
+.stats-btn3:hover {
+  background-color: white;
+  color: rgb(0, 0, 0);
 }
 
 .row-container {
@@ -136,7 +148,13 @@ img {
     padding: 10px;
   }
 
-  .stats-btn {
+  .stats-btn2 {
+    font-size: 14px;
+    width: 100px;
+    height: 50px;
+  }
+
+  .stats-btn3 {
     font-size: 14px;
     width: 100px;
     height: 50px;
